Wed Nov 27 15:21:17 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (gc_page_sweep): Fix compile warning from last commit.
	* hash.c (hash_aset_str): Re-use existing variable to avoid
	  unnecessary pointer dereferencing.

Wed Nov 27 15:12:55 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_page_sweep): disable debug print.

Wed Nov 27 15:05:59 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_stat): add new information heap_eden_page_length and
	  heap_tomb_page_length.

	* test/ruby/test_gc.rb: fix to use GC.stat[:heap_eden_page_length]
	  instead of GC.stat[:heap_length].
	  This test expects `heap_eden_page_length' (used pages size).

Wed Nov 27 15:02:53 2013  Aman Gupta <ruby@tmm1.net>

	* test/ruby/test_eval.rb (class TestEval): Use assert_same instead of
	  assert_equal.
	* test/ruby/test_hash.rb (class TestHash): ditto.
	* test/ruby/test_iseq.rb (class TestISeq): ditto.

Wed Nov 27 14:50:02 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rinda/ring.rb:  Announce RingServer for the same process.
	  [ruby-trunk - Bug #9163]
	* test/rinda/test_rinda.rb:  Tests for the above.

Wed Nov 27 14:37:33 2013  Aman Gupta <ruby@tmm1.net>

	* test/ruby/test_eval.rb (class TestEval): Add test for shared eval
	  filenames via rb_fstring().
	* test/ruby/test_iseq.rb (class TestISeq): Add test for shared
	  iseq labels via rb_fstring(). [Bug #9159]

Wed Nov 27 14:24:55 2013  Aman Gupta <ruby@tmm1.net>

	* hash.c (hash_aset_str): Use rb_fstring() to de-duplicate hash string
	  keys. Patch by Eric Wong. [Bug #8998] [ruby-core:57727]
	* test/ruby/test_hash.rb (class TestHash): test for above.

Wed Nov 27 10:39:39 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c: Rename rb_heap_t members:
	    used -> page_length
	    limit -> total_slots

Wed Nov 27 08:24:49 2013  Aman Gupta <ruby@tmm1.net>

	* compile.c: Use rb_fstring() to de-duplicate string literals in code.
	  [ruby-core:58599] [Bug #9159] [ruby-core:54405]
	* iseq.c (prepare_iseq_build): De-duplicate iseq labels and source